# dlinossrustcandle

./: .copilot-preferences  .gitattributes  .gitignore  .ignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DLINOSS_VISUALIZATION_SHOWCASE.md  LICENSE-APACHE  MCP_STATUS.md  QUALITY_REPORT.md  README.md  dlinossrustcandle.code-workspace  requirements.md
.github/instructions/: copliotinstruction-read-requirements-markdown.instructions.md
00DLinossrustPLAYGROUND/: Cargo.toml  lighting_integration_report.md
00DLinossrustPLAYGROUND/src/: main.rs  support.rs
TEMPTEST/candle_probe/: Cargo.toml
crates/: README.md
crates/dlinoss-augment/: Cargo.toml
crates/dlinoss-augment/src/: lib.rs
crates/dlinoss-display/: Cargo.toml
crates/dlinoss-display/src/: lib.rs
crates/dlinoss-helpers/: Cargo.toml
crates/dlinoss-helpers/src/: lib.rs
crates/dlinoss-helpers/src/probe/: README.md  candle_probe.rs  mod.rs
crates/dlinoss-mcp/: Cargo.toml  README.md
crates/dlinoss-mcp/src/: main.rs
crates/dlinoss-mcp/tests/: roundtrip.rs
docs/: MCP_RUNNING.md  MCP_VS_CODE_INTEGRATION.md  lighting_integration_report.md
examples/: simple_experiment.rs  ultra_simple.rs  viz_animated_egui.rs  viz_animated_tui.rs  viz_dual_pane.rs  viz_tui.rs
images_store/SHOWCASE/: README.md
notebooks/: Cargo.toml  README.md  dlinoss_research_tutorial.ipynb  fft_basic_demo.rs.ipynb  realtime_dlinoss_demo.ipynb
notebooks/jupytext-experiment-subcrate/: .jupytext.toml  Cargo.toml  README.md  hello_notebook.ipynb  hello_notebook.rs
notebooks/src/: lib.rs
scripts/: ai_assistant_demo.sh  ai_comprehensive_demo.sh  aliases.sh  debug_mcp.sh  fastgrep.sh  mcp_client_demo.sh  mcp_client_interactive.sh  mcp_server_start.sh  mcp_server_stop.sh  smart-search
src/: README.md  dlinoss.rs  dlinoss_paper.txt  kernelize.rs  lib.rs  scan.rs
tests/: dev_patch_usage.rs  dlinoss_dimensional.rs  dlinoss_errors.rs  dlinoss_freq.rs  dlinoss_golden.rs  dlinoss_math.rs  dlinoss_spectral.rs  dlinoss_stress.rs  scan_tests.rs  smoke.rs  stability.rs
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
xtask/: Cargo.toml
xtask/src/: main.rs
