[package]
name = "dlinoss-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dlinossrustcandle = { path = ".." }
candlekos = { package = "candle-core", path = "/home/rustuser/projects/rust/from_github/candle/candle-core", default-features = false }
candle-nn = { path = "/home/rustuser/projects/rust/from_github/candle/candle-nn", default-features = false }
# For optional 3D / UI; initial egui 2D + placeholder for future bevy feature
eframe = { version = "0.28", default-features = false, features = ["glow"] }
egui = "0.28"
bevy = { version = "0.13", default-features = false, features = ["bevy_winit", "x11", "bevy_render", "bevy_core_pipeline", "bevy_pbr"] }
bevy_egui = "0.26"
image = { version = "0.24", default-features = false, features = ["png"] }

[features]
default = []
fft = ["dlinossrustcandle/fft", "candlekos/fft"]
bevy-view = []

