[package]
name = "dlinoss-notebooks"
version = "0.1.0"
edition = "2021"
description = "Notebook glue crate: re-export candle-notebooks utilities and dlinossrustcandle API for single-dep notebooks"
license = "MIT OR Apache-2.0"

[features]
default = []
fft = ["dlinossrustcandle/fft", "candle-core/fft"]
gui = ["dep:eframe", "dep:egui_plot"]

[dependencies]
# Use local Candle notebooks utilities (path relative to this file)
candle-notebooks = { path = "../../../from_github/candle/0aEXPLORATION/research/notebooks/candle_notebooks" }
# Re-export the D-LinOSS crate from this workspace
dlinossrustcandle = { path = ".." }
# For FFT helper (candle-core)
candle-core = { path = "../../../from_github/candle/candle-core" }
anyhow = "1.0"
eframe = { version = "0.28", optional = true }
egui_plot = { version = "0.28", optional = true }
