[package]
name = "dlinoss-notebooks"
version = "0.1.0"
edition = "2021"
description = "Notebook utilities crate: Candle helpers, signal generators, FFT tools, and D-LinOSS for evcxr/Jupyter"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"

# Single glue dependency: re-export everything through the root crate which brings local Candle.
dlinossrustcandle = { path = "..", package = "dlinossrustcandle" }

# Core notebook utilities used by helpers/re-exports
base64 = "0.21"
html-escape = "0.2"

# UI and Audio frameworks (optional, only for full demos)
eframe = { version = "0.28", default-features = false, features = ["glow"], optional = true }
egui_plot = { version = "0.28", optional = true }
cpal = { version = "0.15.2", optional = true }
minifb = { version = "0.27", optional = true }

# Pin transitive versions to match local Candle checkout to keep evcxr resolver stable
# These are not used directly but guide Cargo to a consistent graph.
zip = { version = "=1.1.1" }
num_enum = { version = "=0.7.4" }
rustversion = { version = "=1.0.22" }

[features]
default = []
# Feature passthroughs to the root crate (Candle FFT/scan live there)
fft = ["dlinossrustcandle/fft"]
accelerate = ["dlinossrustcandle/accelerate"]
cuda = ["dlinossrustcandle/cuda"]
cudnn = ["dlinossrustcandle/cudnn"]
mkl = ["dlinossrustcandle/mkl"]
metal = ["dlinossrustcandle/metal"]
gui = ["eframe", "egui_plot", "dlinossrustcandle/egui"]
audio = ["cpal"]
display = ["minifb"]
full = ["gui", "audio", "display", "fft"]

