[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
description = "Maintenance tasks for the dlinoss workspace"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
xshell = "0.2"
pathdiff = "0.2"
image = { version = "0.24", default-features = false, features = ["png","gif"] }
gif = "0.13"
serde_json = "1"
