[package]
name = "dlinoss-augment"
version = "0.1.0"
edition = "2024"
description = "Trait-based helpers for D-LinOSS: scan/FFT conveniences built on Candle"
license = "MIT OR Apache-2.0"

[dependencies]
# Use local Candle checkout paths (aligned with root Cargo.toml) to avoid unused patch warnings.
candlekos = { package = "candle-core", path = "/home/rustuser/projects/rust/from_github/candle/candle-core", default-features = false }
anyhow = "1"
# Local experimental augment crate path (not published on crates.io)
candle_tensor_augment = { path = "/home/rustuser/projects/rust/from_github/candle/0aEXPLORATION/candle_tensor_augment", optional = true }

[features]
default = []
fft = ["candlekos/fft"]
augment = ["dep:candle_tensor_augment"]
augment-expr = ["augment", "candle_tensor_augment/expr"]
